...
                LazyNavigationView(AddOrEditView(selectedDate: vm.input.todayDate.value))
            } label: {
                Resources.Images.plus
                    .padding(8)
            }
            .disabled(!viewStatus.isPresentingBottomSheet)
            .accessibilityIdentifier("AddLog")
        }
    }
    
    // MARK: NavigationLeading
    private func leadingBarButton() -> some View {
        Button(action: {
...
